--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,5 @@
 spring.datasource.url=jdbc:mysql://localhost:3306/ctrfin_api
 spring.datasource.username=root
 spring.datasource.password=subsisto@2010
+
+spring.jpa.show-sql=true
