--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,3 +8,8 @@ spring.jpa.properties.hibernate.format_sql=true
 server.error.include-stacktrace=never
 
 api.security.token.secret=${JWT_SECRET:12345678}
+
+
+exchangerates.api.url=https://api.exchangeratesapi.io/v1
+exchangerates.api.key=1f7f3cb9ed86c26df6e195ef7d52bd1a
+exchangerates.api.moedaBase=EUR
