--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,4 +12,4 @@ api.security.token.secret=${JWT_SECRET:12345678}
 
 exchangerates.api.url=https://api.exchangeratesapi.io/v1
 exchangerates.api.key=1f7f3cb9ed86c26df6e195ef7d52bd1a
-exchangerates.api.moedaBase=BRL
+exchangerates.api.moedaBase=EUR
